@@ -3,9 +3,12 @@ package org.api.service;
 import static org.api.exception.ErrorCodes.POST_NOT_FOUND;
 import static org.api.exception.ErrorCodes.POST_UPLOAD_FAILED;
 
-import java.util.ArrayList;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.api.entity.FoodEntity;
@@ -24,6 +27,7 @@ import org.core.request.PostRequest;
 import org.core.response.FoodResponse;
 import org.core.response.HealthResponse;
 import org.core.response.PostDetailResponse;
+import org.hibernate.dialect.SybaseASEDialect;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -80,22 +84,26 @@ public class PostService {
             postImageUrlRepository.save(postImageUrlEntity);
         }
     }
-
-    @Transactional(readOnly = true)
-    public PostDetailResponse getPostDetail(Long postId) {
+    @Transactional
+    public PostDetailResponse getPostDetail(Long postId, HttpServletRequest request, HttpServletResponse response) {
         PostEntity postEntity = postRepository.findById(postId)
                 .orElseThrow(() -> new CustomException(POST_NOT_FOUND));
+
+        if (!hasViewedPost(postId, request)) {
+            updateView(postId);
+            updatePostViewCookie(postId, request, response); // 쿠키 업데이트 로직을 여기서 호출
+        }
 
         List<FoodEntity> foodEntities = getPostFoodDetailData(postId);
         List<HealthEntity> healthEntities = getPostHealthDetailData(postId);
         List<String> imageUrls = postImageUrlRepository.findByPostPostId(postId).stream()
                 .map(PostImageUrlEntity::getImageUrl)
-                .toList();
+                .collect(Collectors.toList());
 
-        return makePostDetailResponse(postEntity, foodEntities, healthEntities, imageUrls);
+        return makePostDetailResponse(postEntity, foodEntities, healthEntities, imageUrls, request, response);
     }
 
-    private List<FoodEntity> getPostFoodDetailData(Long postId) {
+        private List<FoodEntity> getPostFoodDetailData(Long postId) {
         return postFoodRepository.findByPostPostId(postId).stream()
                 .map(PostFoodEntity::getFood)
                 .collect(Collectors.toList());
@@ -108,7 +116,8 @@ public class PostService {
     }
 
     private PostDetailResponse makePostDetailResponse(PostEntity postEntity, List<FoodEntity> foodEntities,
-                                                      List<HealthEntity> healthEntities, List<String> imageUrls) {
+                                                      List<HealthEntity> healthEntities, List<String> imageUrls,
+                                                      HttpServletRequest request, HttpServletResponse response) {
         List<FoodResponse> foodResponseList = foodEntities.stream()
                 .map(foodEntity -> FoodResponse.toResponse(
                         foodEntity.getFoodRecordId(), foodEntity.getFoodDate(), foodEntity.getMealType(),
@@ -118,13 +127,142 @@ public class PostService {
 
         List<HealthResponse> healthResponseList = healthEntities.stream()
                 .map(healthEntity -> HealthResponse.toResponse(
-                        healthEntity.getHealthRecordId(), healthEntity.getHealthDate(), healthEntity.getAllergiesStatus(),
+                        healthEntity.getHealthRecordId(), healthEntity.getHealthDate(),
+                        healthEntity.getAllergiesStatus(),
                         healthEntity.getConditionStatus(), healthEntity.getWeight(), healthEntity.getSleepTime(),
                         healthEntity.getHealthNotes(), healthEntity.getPillsDtoList()))
                 .collect(Collectors.toList());
 
+        String userName = postEntity.getUser().getUsername();
+        LocalDateTime postDateTime = postEntity.getCreatedAtDate();
+        updatePostViewCookie(postEntity.getPostId(), request, response);
+
         return PostDetailResponse.toResponse(postEntity.getTitle(), postEntity.getContent(),
-                healthResponseList, foodResponseList, imageUrls);
+                healthResponseList, userName, postEntity.getViews(),postDateTime, foodResponseList, imageUrls);
     }
+
+    @Transactional
+    public int updateView(Long postId) {
+        postRepository.updateViews(postId);
+        return postRepository.findByPostId(postId).getViews();
+    }
+
+    private boolean hasViewedPost(Long postId, HttpServletRequest request) {
+        Cookie[] cookies = request.getCookies();
+        if (cookies != null) {
+            for (Cookie cookie : cookies) {
+                if (cookie.getName().equals("postView") && cookie.getValue().contains("[" + postId.toString() + "]")) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    private void updatePostViewCookie(Long postId, HttpServletRequest request, HttpServletResponse response) {
+        Cookie oldCookie = null;
+        Cookie[] cookies = request.getCookies();
+        if (cookies != null) {
+            for (Cookie cookie : cookies) {
+                if (cookie.getName().equals("postView")) {
+                    oldCookie = cookie;
+                }
+            }
+        }
+        if (oldCookie != null && !oldCookie.getValue().contains("["+ postId.toString() +"]")) {
+            oldCookie.setValue(oldCookie.getValue() + "_[" + postId + "]");
+            oldCookie.setPath("/");
+            oldCookie.setMaxAge(60 * 60 * 24);
+            response.addCookie(oldCookie);
+        } else if (oldCookie == null) {
+            Cookie newCookie = new Cookie("postView", "[" + postId + "]");
+            newCookie.setPath("/");
+            newCookie.setMaxAge(60 * 60 * 24);
+            response.addCookie(newCookie);
+        }
+    }
+
+//    @Transactional
+//    public PostDetailResponse getPostDetail(Long postId, HttpServletRequest request, HttpServletResponse response) {
+//        PostEntity postEntity = postRepository.findById(postId)
+//                .orElseThrow(() -> new CustomException(POST_NOT_FOUND));
+//
+//        List<FoodEntity> foodEntities = getPostFoodDetailData(postId);
+//        List<HealthEntity> healthEntities = getPostHealthDetailData(postId);
+//        List<String> imageUrls = postImageUrlRepository.findByPostPostId(postId).stream()
+//                .map(PostImageUrlEntity::getImageUrl)
+//                .toList();
+//
+//        return makePostDetailResponse(postEntity, foodEntities, healthEntities, imageUrls, request, response);
+//    }
+//
+//    private List<FoodEntity> getPostFoodDetailData(Long postId) {
+//        return postFoodRepository.findByPostPostId(postId).stream()
+//                .map(PostFoodEntity::getFood)
+//                .collect(Collectors.toList());
+//    }
+//
+//    private List<HealthEntity> getPostHealthDetailData(Long postId) {
+//        return postHealthRepository.findByPostPostId(postId).stream()
+//                .map(PostHealthEntity::getHealth)
+//                .collect(Collectors.toList());
+//    }
+//
+//    private PostDetailResponse makePostDetailResponse(PostEntity postEntity, List<FoodEntity> foodEntities,
+//                                                      List<HealthEntity> healthEntities, List<String> imageUrls,
+//                                                      HttpServletRequest request, HttpServletResponse response) {
+//        List<FoodResponse> foodResponseList = foodEntities.stream()
+//                .map(foodEntity -> FoodResponse.toResponse(
+//                        foodEntity.getFoodRecordId(), foodEntity.getFoodDate(), foodEntity.getMealType(),
+//                        foodEntity.getMealTime(), foodEntity.getFoodName(), foodEntity.getIngredientsDtoList(),
+//                        foodEntity.getFoodNotes()))
+//                .collect(Collectors.toList());
+//
+//        List<HealthResponse> healthResponseList = healthEntities.stream()
+//                .map(healthEntity -> HealthResponse.toResponse(
+//                        healthEntity.getHealthRecordId(), healthEntity.getHealthDate(),
+//                        healthEntity.getAllergiesStatus(),
+//                        healthEntity.getConditionStatus(), healthEntity.getWeight(), healthEntity.getSleepTime(),
+//                        healthEntity.getHealthNotes(), healthEntity.getPillsDtoList()))
+//                .collect(Collectors.toList());
+//
+//        String userName = postEntity.getUser().getUsername();
+//        LocalDateTime postDateTime = postEntity.getCreatedAtDate();
+//        updatePostView(postEntity.getPostId(), request, response);
+//
+//        return PostDetailResponse.toResponse(postEntity.getTitle(), postEntity.getContent(),
+//                healthResponseList, userName, postEntity.getViews(),postDateTime, foodResponseList, imageUrls);
+//    }
+//
+//    private void updatePostView(Long postId, HttpServletRequest request, HttpServletResponse response) {
+//        Cookie oldCookie = null;
+//        Cookie[] cookies = request.getCookies();
+//        if (cookies != null) {
+//            for (Cookie cookie : cookies) {
+//                if (cookie.getName().equals("postView")) {
+//                    oldCookie = cookie;
+//                }
+//            }
+//        }
+//        if (oldCookie != null) {
+//            if (!oldCookie.getValue().contains("["+ postId.toString() +"]")) {
+//                updateView(postId);
+//                oldCookie.setValue(oldCookie.getValue() + "_[" + postId + "]");
+//                oldCookie.setPath("/");
+//                oldCookie.setMaxAge(60 * 60 * 24);
+//                response.addCookie(oldCookie);
+//            }
+//        } else {
+//            updateView(postId);
+//            Cookie newCookie = new Cookie("postView", "[" + postId + "]");
+//            newCookie.setPath("/");
+//            newCookie.setMaxAge(60 * 60 * 24);
+//            response.addCookie(newCookie);
+//        }
+//    }
+//    @Transactional
+//    public int updateView(Long postId) {
+//        return postRepository.updateViews(postId);
+//    }
 
 }
